Closed Bug 365021 Opened 19 years ago Closed 19 years ago

Regression with glyph y-offsets

Categories

(Core :: Graphics, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: smontagu, Assigned: smontagu)

References

()

Details

(Keywords: regression, testcase)

Attachments

(1 file)

Bug 364742 made the fix to bug 361782 unnecessary, but it introduced another bug with y-offsets. See the testcase in attachment 247102 [details].
Attached patch PatchSplinter Review
Attachment #249681 - Flags: review?(pavlov)
Assignee: nobody → smontagu
Comment on attachment 249681 [details] [diff] [review] Patch go ahead and check this in. r?'ing vlad so he'll see the cairo change for future merges.
Attachment #249681 - Flags: review?(vladimir)
Attachment #249681 - Flags: review?(pavlov)
Attachment #249681 - Flags: review+
Checked in.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Comment on attachment 249681 [details] [diff] [review] Patch Pushed upstream
Attachment #249681 - Flags: review?(vladimir) → review+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: