Make the y-offsets cairo sends to ExtTextOut relative to the location of the previous glyph instead of relative to the baseline. Bug 365021, r=pavlov